eirini-persi/ytt/base/pods.yaml
#@ load("@ytt:data", "data")

apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/instance: eirini-persi
    app.kubernetes.io/name: eirini-persi
  name: eirini-persi
spec:
  serviceAccountName: eirini-persi-volume-services
  automountServiceAccountToken: true
  containers:
  - image: #@ data.values.image.repository + ":" + data.values.image.tag
    imagePullPolicy: Always
    name: eirini-persi-start
    command: ["/app/main"]
    args: ["start", "--register", "false"]
    ports:
    - containerPort: 443
      name: http
      protocol: TCP
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
