eirini-persi/ytt/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name: eirini-persi
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: eirini-persi-svc
              servicePort: https
            path: /
      host:
